pendulum_espidf/build/log/idf_py_stdout_output_19550
[1/10] Performing build step for 'bootloader'
[1/1] cd /Users/naichenzhao/Desktop/SLICE/winter_demo_sophia/pendulum_espidf/build/bootloader/esp-idf/esptool_py && /Users/naichenzhao/.espressif/python_env/idf5.3_py3.11_env/bin/python /Users/naichenzhao/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/naichenzhao/Desktop/SLICE/winter_demo_sophia/pendulum_espidf/build/bootloader/bootloader.bin
Bootloader binary size 0x6850 bytes. 0x7b0 bytes (7%) free.
[2/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/accel.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/accel.c.obj 
/Users/naichenzhao/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3-dev-1043-g8c9e29898f\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/naichenzhao/Desktop/SLICE/winter_demo_sophia/pendulum_espidf/build/config -I/Users/naichenzhao/Desktop/SLICE/winter_demo_sophia/pendulum_espidf/main -I/Users/naichenzhao/esp/esp-idf/components/newlib/platform_include -I/Users/naichenzhao/esp/esp-idf/components/freertos/config/include -I/Users/naichenzhao/esp/esp-idf/components/freertos/config/include/freertos -I/Users/naichenzhao/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/naichenzhao/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/naichenzhao/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/naichenzhao/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/naichenzhao/esp/esp-idf/components/freertos/esp_additions/include -I/Users/naichenzhao/esp/esp-idf/components/esp_hw_support/include -I/Users/naichenzhao/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/naichenzhao/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/naichenzhao/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/naichenzhao/esp/esp-idf/components/heap/include -I/Users/naichenzhao/esp/esp-idf/components/log/include -I/Users/naichenzhao/esp/esp-idf/components/soc/include -I/Users/naichenzhao/esp/esp-idf/components/soc/esp32 -I/Users/naichenzhao/esp/esp-idf/components/soc/esp32/include -I/Users/naichenzhao/esp/esp-idf/components/hal/platform_port/include -I/Users/naichenzhao/esp/esp-idf/components/hal/esp32/include -I/Users/naichenzhao/esp/esp-idf/components/hal/include -I/Users/naichenzhao/esp/esp-idf/components/esp_rom/include -I/Users/naichenzhao/esp/esp-idf/components/esp_rom/include/esp32 -I/Users/naichenzhao/esp/esp-idf/components/esp_rom/esp32 -I/Users/naichenzhao/esp/esp-idf/components/esp_common/include -I/Users/naichenzhao/esp/esp-idf/components/esp_system/include -I/Users/naichenzhao/esp/esp-idf/components/esp_system/port/soc -I/Users/naichenzhao/esp/esp-idf/components/esp_system/port/include/private -I/Users/naichenzhao/esp/esp-idf/components/xtensa/esp32/include -I/Users/naichenzhao/esp/esp-idf/components/xtensa/include -I/Users/naichenzhao/esp/esp-idf/components/xtensa/deprecated_include -I/Users/naichenzhao/esp/esp-idf/components/lwip/include -I/Users/naichenzhao/esp/esp-idf/components/lwip/include/apps -I/Users/naichenzhao/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/naichenzhao/esp/esp-idf/components/lwip/lwip/src/include -I/Users/naichenzhao/esp/esp-idf/components/lwip/port/include -I/Users/naichenzhao/esp/esp-idf/components/lwip/port/freertos/include -I/Users/naichenzhao/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/naichenzhao/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/naichenzhao/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/naichenzhao/Desktop/SLICE/winter_demo_sophia/pendulum_espidf/components/ahrs/include -I/Users/naichenzhao/Desktop/SLICE/winter_demo_sophia/pendulum_espidf/components/mpu9250/include -I/Users/naichenzhao/esp/esp-idf/components/driver/deprecated -I/Users/naichenzhao/esp/esp-idf/components/driver/i2c/include -I/Users/naichenzhao/esp/esp-idf/components/driver/ledc/include -I/Users/naichenzhao/esp/esp-idf/components/driver/parlio/include -I/Users/naichenzhao/esp/esp-idf/components/driver/touch_sensor/include -I/Users/naichenzhao/esp/esp-idf/components/driver/twai/include -I/Users/naichenzhao/esp/esp-idf/components/driver/usb_serial_jtag/include -I/Users/naichenzhao/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/Users/naichenzhao/esp/esp-idf/components/esp_pm/include -I/Users/naichenzhao/esp/esp-idf/components/esp_ringbuf/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_gpio/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_pcnt/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_gptimer/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_spi/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_mcpwm/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_i2s/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_sdmmc/include -I/Users/naichenzhao/esp/esp-idf/components/sdmmc/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_sdspi/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_sdio/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_dac/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_rmt/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_tsens/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_sdm/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_i2c/include -I/Users/naichenzhao/esp/esp-idf/components/esp_driver_uart/include -I/Users/naichenzhao/esp/esp-idf/components/vfs/include -I/Users/naichenzhao/Desktop/SLICE/winter_demo_sophia/pendulum_espidf/components/rotary_encoder/include -I/Users/naichenzhao/esp/esp-idf/components/esp_timer/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/naichenzhao/Desktop/SLICE/winter_demo_sophia/pendulum_espidf=. -fmacro-prefix-map=/Users/naichenzhao/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/accel.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/accel.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/accel.c.obj -c /Users/naichenzhao/Desktop/SLICE/winter_demo_sophia/pendulum_espidf/main/accel.c
/Users/naichenzhao/Desktop/SLICE/winter_demo_sophia/pendulum_espidf/main/accel.c: In function 'accel_init':
/Users/naichenzhao/Desktop/SLICE/winter_demo_sophia/pendulum_espidf/main/accel.c:86:92: error: 'PRO_CPU' undeclared (first use in this function); did you mean 'PRO_CPU_NUM'?
   86 |     xTaskCreatePinnedToCore(imu_task, "imu_task", 4096, NULL, 2 | portPRIVILEGE_BIT, NULL, PRO_CPU);
      |                                                                                            ^~~~~~~
      |                                                                                            PRO_CPU_NUM
/Users/naichenzhao/Desktop/SLICE/winter_demo_sophia/pendulum_espidf/main/accel.c:86:92: note: each undeclared identifier is reported only once for each function it appears in
[3/10] No install step for 'bootloader'
ninja: build stopped: subcommand failed.
